test/expected/xec_explain_t.out
explain _Sat x
        ^
9: error: "_Sat" requires either "_Accum" or "_Fract"
